# kube-state-rs

./: Cargo.toml  Dockerfile  Dockerfile_processor  Dockerfile_watcher  README.md  kube-state-rs-processor.yaml  kube-state-rs-watcher.yaml  kube-state-rs.yaml  test.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs  processor.rs  utils.rs  watcher.rs
