[package]
name = "kube-state-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "kube_state_rs"

[[bin]]
name = "watcher"

[[bin]]
name = "processor"

[dependencies]
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19", features = ["latest"] }
tokio = { version = "1.32", features = ["full", "rt"] }
rand = "0.8"
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
serial_test = "2"
anyhow = "1.0"
signal-hook = "0.3"
kube-leader-election = ">=0.25"
sha2 = "0.10"
hex = "0.4"
